# time-tracker

./: .gitignore  CLAUDE.md  FORboehpyk.md  README.md  TimeTracker-0.1.0-1.x86_64.rpm  TimeTracker_0.1.0_amd64.deb  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/agents/: backend-test.md  backend.md  frontend-test.md  frontend.md  orchestrator.md  review.md
docs/: app-description.md  plan.md
docs/explanation/: tauri-lib.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_add_archived_entries.sql
src-tauri/src/: db.rs  error.rs  lib.rs  main.rs  models.rs  tray.rs
src-tauri/src/commands/: entries.rs  idle.rs  mod.rs  projects.rs  reports.rs  tasks.rs  timer.rs
src-tauri/tests/: commands_integration.rs  db_tests.rs
src/__tests__/: App.test.ts  setup.ts
src/__tests__/components/entries/: EntryEditDialog.spec.ts
src/__tests__/components/layout/: AppShell.test.ts  (+1 more)
src/__tests__/composables/: useIdleDetection.spec.ts  useKeyboardShortcuts.spec.ts  useTimer.spec.ts
src/__tests__/router/: index.test.ts
src/__tests__/services/: pdfExport.test.ts  tauriApi.test.ts
src/__tests__/stores/: projects.test.ts  reports.test.ts  tasks.test.ts  timer.test.ts
src/__tests__/types/: index.test.ts
src/__tests__/views/: DashboardView.spec.ts  EntriesView.spec.ts  ProjectDetailView.spec.ts  ProjectsView.spec.ts  ReportsView.spec.ts
src/components/entries/: EntryEditDialog.vue
src/components/layout/: AppShell.vue  SidebarNav.vue
src/components/projects/: ProjectCard.vue  ProjectFormDialog.vue
src/components/reports/: ReportDetailTable.vue  ReportExportButton.vue  ReportFilterPanel.vue  ReportSummaryTable.vue
src/components/tasks/: TaskFormDialog.vue  TaskListItem.vue
src/components/timer/: IdlePromptDialog.vue  TaskSelector.vue  TimerWidget.vue
src/composables/: useIdleDetection.ts  useKeyboardShortcuts.ts  useTimer.ts
src/router/: index.ts
src/services/: pdfExport.ts  tauriApi.ts
src/stores/: projects.ts  reports.ts  tasks.ts  timer.ts
src/types/: index.ts
src/views/: DashboardView.vue  EntriesView.vue  ProjectDetailView.vue  ProjectsView.vue  ReportsView.vue
(+10 files in other folders)
