[package]
name = "time-tracker"
version = "0.1.0"
description = "TimeTracker — desktop time tracking application"
authors = []
license = ""
repository = ""
default-run = "time-tracker"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "time_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "time-tracker"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[dependencies]
tauri = { version = "2", features = ["tray-icon"], optional = true }
tauri-plugin-sql = { version = "2", features = ["sqlite"], optional = true }
tauri-plugin-shell = { version = "2", optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
tauri-plugin-fs = { version = "2", optional = true }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
log = "0.4"

# Idle detection — optional so the crate still compiles on non-X11/Wayland systems
x11rb = { version = "0.13", optional = true, features = ["screensaver"] }
zbus = { version = "5", optional = true, default-features = false, features = ["tokio"] }

[features]
default = ["tauri-app", "x11-idle", "wayland-idle"]
# tauri-app gates the full Tauri runtime; disable for unit/integration tests
# dep:tauri-build is listed here (not under [build-dependencies] unconditionally)
# so that the build script only runs when Tauri's code-generation is actually
# needed. Without this guard, `cargo test --no-default-features` would require
# the Tauri build script — and the GTK/WebKit system libraries it inspects —
# even though tests never start the Tauri runtime.
tauri-app = ["dep:tauri", "dep:tauri-plugin-sql", "dep:tauri-plugin-shell", "dep:tauri-plugin-dialog", "dep:tauri-plugin-fs", "dep:tauri-build"]
x11-idle = ["dep:x11rb"]
wayland-idle = ["dep:zbus"]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Prevents additional console window on Windows in release
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
